# XV6-system-call

./: CMakeLists.txt  Makefile  README  README.md
kernel/: defs.h  kalloc.c  main.c  syscall.c  syscall.h  sysproc.c  vm.c
user/: kfreemem.c  user.h  usys.pl
